# ESP32_S3_weather

./: BOM.xls  README.md
VS_studio_V7/LVGL.Simulator/: LVGL.Simulator.cpp  lv_conf.h
watches_PCB/: ESP32_S3_V2.1.PrjPcb  ESP32_S3_V2.1.PrjPcbStructure  MCU.SchDoc  peripheral.SchDoc  power.SchDoc  心率传感器转接板.PcbDoc
watches_PCB/__Previews/: peripheral.SchDocPreview  power.SchDocPreview
watches_code/: CMakeLists.txt  Makefile  README.md  esp.vsdx  example_test.py  sdkconfig  sdkconfig.defaults  sdkconfig.old  tempCodeRunnerFile.c
watches_code/components/ASR/: CMakeLists.txt
watches_code/components/ASR/src/: i2s_example.c  (+1 more)
watches_code/components/FOUNT/: CMakeLists.txt
watches_code/components/HTTP/: CMakeLists.txt
watches_code/components/HTTP/include/: Http_Weather.h  Http_time.h
watches_code/components/HTTP/src/: Http_Weather.c  Http_time.c
watches_code/components/MPU6050/: CMakeLists.txt
watches_code/components/SDCARD/: CMakeLists.txt
watches_code/components/TFT/: CMakeLists.txt
watches_code/components/TFT/include/: User_Touch.h  User_img.h  Watch.h  gui_main.h
watches_code/components/TFT/src/: Time.c  User_Touch.c  Watch.c  gui_main.c  outswitch.c  weather.c
watches_code/components/User_I2C/: CMakeLists.txt
watches_code/components/User_OTA/: CMakeLists.txt
watches_code/components/WIFI/: CMakeLists.txt
watches_code/components/WIFI/include/: Serve_Http.h  User_Wifi.h  web_serve.h
watches_code/components/WIFI/src/: User_Wifi.c  web_serve.c
watches_code/components/lv_fs_if/: CMakeLists.txt
watches_code/components/lv_fs_if/include/: lv_fs_if.h
watches_code/components/lv_fs_if/src/: lv_fs_fatfs.c
watches_code/components/lvgl/: lv_conf_template.h  lvgl.h
watches_code/components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c
watches_code/components/picture/: CMakeLists.txt
watches_code/main/: CMakeLists.txt  Power.c  Untitled-1.cpp  main.c  main.h  power.h
watches_code/material/New/: landscape.c  starry_sky.c
watches_code/material/http/: web_serve.html
(+37 files in other folders)
